# ChessEngineCPP

./: CMakeLists.txt  README.md
docs/: attacks.md  bitboard.md  board.md  movegen.md  piece.md
include/: attacks.hpp  bitboard.hpp  board.hpp  movegen.hpp  piece.hpp
src/: attacks.cpp  board.cpp  main.cpp  movegen.cpp
